# backend-api/src/models/UserModel.js
@@ -1,0 +1,20 @@
+import mongoose from "mongoose";
+
+const userSchema = new mongoose.Schema(
+  {
+    name: { type: String, required: true, unique: true },
+    email: { type: String, required: true, unique: true },
+    password: { type: String, required: true },
+    cartData: { type: Object, default: {} },
+    createdAt: { type: Date, default: Date.now },
+  },
+  {
+    timestamps: true,
+    minimize: false, // Ensure empty objects are saved as-is
+  }
+);
+
+const UserModel =
+  mongoose.models.UserModel || mongoose.model("UserModel", userSchema);
+
+export default UserModel;
